--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "axios": "^0.21.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "styled-components": "^5.2.3",
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
