--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "axios": "^0.21.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-hook-form": "^7.3.4",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.2.3",
     "styled-system": "^5.1.5"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "autoprefixer": "^10.2.5",
+    "postcss": "^8.2.13",
+    "tailwindcss": "^2.1.2",
     "vite": "^2.2.3"
   }
 }
