--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "autoprefixer": "^10.2.5",
     "postcss": "^8.2.13",
+    "postcss-nested": "^5.0.5",
     "tailwindcss": "^2.1.2",
     "vite": "^2.2.3"
   }
