--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.6.0",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "axios": "^0.21.1",
+    "framer-motion": "^4",
     "prop-types": "^15.7.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-hook-form": "^7.3.4",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.2.3",
     "styled-system": "^5.1.5"
