--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@chakra-ui/react": "^1.6.0",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@hookform/resolvers": "^2.4.0",
     "axios": "^0.21.1",
     "framer-motion": "^4",
     "prop-types": "^15.7.2",
@@ -19,7 +20,8 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.2.3",
-    "styled-system": "^5.1.5"
+    "styled-system": "^5.1.5",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
