--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^4",
     "prop-types": "^15.7.2",
     "react": "^17.0.0",
+    "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.0",
     "react-hook-form": "^7.3.4",
     "react-icons": "^4.2.0",
