--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-dropzone": "^11.3.2",
     "react-hook-form": "^7.3.4",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
