--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.2.3",
     "styled-system": "^5.1.5",
+    "swr": "^0.5.6",
     "yup": "^0.32.9"
   },
   "devDependencies": {
