--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^2.4.0",
     "axios": "^0.21.1",
     "framer-motion": "^4",
+    "jwt-decode": "^3.1.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.0",
     "react-datepicker": "^3.8.0",
