--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.3.4",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
+    "socket.io-client": "^4.1.2",
     "styled-components": "^5.2.3",
     "styled-system": "^5.1.5",
     "swr": "^0.5.6",
